--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -16,6 +16,7 @@
 
 	<!-- Custom styles for this template -->
 	<link th:href="@{css/heroic-features.css}" rel="stylesheet">
+
 	
 </head>
 
@@ -83,11 +84,28 @@
 
 	<!-- Footer -->
 	<div th:fragment="footer">
-		<footer class="py-5 bg-dark" style="background-color: #FFC0CB !important">
+		<footer class="py-4 bg-dark" style="background-color: #FFC0CB !important;">
 			<div class="container">
-				<p class="m-0 text-center text-white" style="font-size:3em;color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black">Paraíso Shoes</p>
+			  <div class="row">
+				<div class="col-md-6 mb-3">
+				  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.0962593866293!2d-72.508336726484!3d7.884997205849284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e665befeedd8517%3A0xdf62eebf22e0de51!2sEl%20Gran%20Sam%20del%20Norte%20-%20Centro%20Internacional%20de%20la%20Moda!5e0!3m2!1ses-419!2sco!4v1719097219590!5m2!1ses-419!2sco" class="google-map" allowfullscreen="" loading="lazy" style="border: 0; border-radius: 15px; width: 100%; height: 200px;"></iframe>
+				</div>
+				<div class="col-md-6">
+				  <div class="text-center">
+					<p class="m-0 text-center text-white" style="font-size: 2.5em; color: #FFFFFF; text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; margin-bottom: 10px;">Paraíso Shoes</p>
+					<div>
+					  <img src="/images/instagram.png" alt="Instagram" style="width: 40px; height: 40px; margin-left: 10px;">
+					  <span style="font-size: 1.5em;font-weight: bold; color: #FFFFFF;">paraiso_shoes30</span>
+					</div>
+					<div>
+					  <img src="/images/facebook.png" alt="Facebook" style="width: 40px; height: 40px; margin-left: 10px;">
+					  <span style="font-size: 1.5em;font-weight: bold; color: #FFFFFF;">paraiso_shoes30</span>
+					</div>
+				  </div>
+				</div>
+			  </div>
 			</div>
-		</footer>
+		  </footer>
 	</div>
 
 
