--- a/src/main/resources/templates/usuario/pdf.html
+++ b/src/main/resources/templates/usuario/pdf.html
@@ -16,6 +16,8 @@
 
 	<!-- Custom styles for this template -->
 	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+    <script src="html2pdf.bundle.min.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -41,39 +43,65 @@
 
 		<!-- Page Heading/Breadcrumbs -->
 		<h1 class="mt-4 mb-3">
-			Paraíso Shoes <small>Compras</small>
+			Paraíso Shoes <small>Resumen de la orden</small>
 		</h1>
 
 		<ol class="breadcrumb" style="background-color:#FFC0CB">
 			<li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000;text-shadow:-0.5px -0.5px 0 white,0.5px -0.5px 0 white,-0.5px 0.5px 0 white,0.5px 0.5px 0 white">Inicio</a></li>
-			<li class="breadcrumb-item active" style="color: #000000" >Compras</li>
+			<li class="breadcrumb-item active" style="color: #000000">Orden</li>
 		</ol>
 
 		<!-- Blog Post -->
 		<div class="card mb-4">
 			<div class="card-body">
 				<div class="row">
-					<div class="col-lg-12">
-						<table class="table">
-							<thead>
-								<tr>
-									<th scope="col">No. de Orden</th>
-									<th scope="col">Fecha</th>
-									<th scope="col">Valor</th>
-									<th scope="col">Acción</th>
-									<th scope="col">PDF</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr th:each="orden: ${ordenes}">
-									<td th:text="${orden.numero}"></td>
-									<td th:text="${orden.fechaCreacion}"></td>
-									<td th:text="${orden.total}"></td>
-									<td><a th:href="@{/usuario/detalle/{id} (id=${orden.id}) }" class="btn btn-success" style="background-color:#25BD00">Ver Detalle</a></td>
-									<td><a th:href="@{/usuario/archivoPdf/{id} (id=${orden.id}) }" class="btn btn-success" style="background-color:#25BD00">Generar PDF</a></td>
-								</tr>
-							</tbody>
-						</table>
+					<div class="col-lg-9">
+						<div class="card-body">
+							<h5 class="card-title">
+								DATOS ORDEN
+							</h5>
+							<h6 th:text="'Nombre: '+${usuario.nombre}"></h6>
+							<h6 th:text="'Correo: '+${usuario.email}"></h6>
+							<h6 th:text="'Direccion: '+${usuario.direccion}"></h6>
+
+							<h5 class="card-title">
+								PRODUCTOS
+							</h5>
+							<div class="alert alert-light" role="alert">
+								<table class="table">
+									<thead>
+										<tr>
+											<th scope="col">Producto</th>
+											<th scope="col">Precio</th>
+											<th scope="col">Cantidad</th>
+											<th scope="col">Total</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr th:each="dtorden:${cart}">
+											<td th:text="${dtorden.nombre}"></td>
+											<td th:text="${dtorden.precio}"></td>
+											<td th:text="${dtorden.cantidad}"></td>
+											<td th:text="${dtorden.total}"></td>
+
+										</tr>
+									</tbody>
+								</table>
+							</div>
+
+						</div>
+					</div>
+
+
+					<div class="col-lg-3">
+						<h2 class="card-title">Resumen Orden</h2>
+
+						<ul class="list-group">
+							<li class="list-group-item">
+								<h5 th:text="'Total: '+ ${orden.total}"></h5>
+							</li>
+							<button id="btnCrearPdf">Generar PDF</button>
+						</ul>
 					</div>
 				</div>
 			</div>
