--- a/src/main/resources/templates/usuario/pdf.html
+++ b/src/main/resources/templates/usuario/pdf.html
@@ -17,7 +17,6 @@
 	<!-- Custom styles for this template -->
 	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
     <script src="html2pdf.bundle.min.js"></script>
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -100,7 +99,7 @@
 							<li class="list-group-item">
 								<h5 th:text="'Total: '+ ${orden.total}"></h5>
 							</li>
-							<button id="btnCrearPdf">Generar PDF</button>
+							<button id="btnCrearPdf" src="generarPdf()">Click aquí</button>
 						</ul>
 					</div>
 				</div>
@@ -115,6 +114,38 @@
 	<!-- Bootstrap core JavaScript -->
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
 	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+	<script>
+		function generarPdf(){
+			document.addEventListener("DOMContentLoaded", () => {
+				// Escuchamos el click del botón
+				const $boton = document.querySelector("#btnCrearPdf");
+				$boton.addEventListener("click", () => {
+					const $elementoParaConvertir = document.body; // <-- Aquí puedes elegir cualquier elemento del DOM
+					html2pdf()
+						.set({
+							margin: 1,
+							filename: 'documento. pdf',
+							image: {
+								type: 'jpeg',
+								quality: 0.98
+							},
+							html2canvas: {
+								scale: 3, // A mayor escala, mejores gráficos, pero más peso
+								letterRendering: true,
+							},
+							jsPDF: {
+								unit: "in",
+								format: "a3",
+								orientation: 'portrait' // landscape o portrait
+							}
+						})
+						.from($elementoParaConvertir)
+						.save()
+						.catch(err => console.log(err));
+				});
+			});
+		}
+	</script>
 
 </body>
 
